deployments/openshift/kustomize/base/backend/eventstore/dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: hms-api-eventstore
spec:
  replicas: 1
  selector:
    name: hms-api-eventstore
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        name: hms-api-eventstore
    spec:
      containers:
        - name: hms-api-eventstore
          image: hms-api-eventstore:latest
          ports:
            - containerPort: 1113
            - containerPort: 2113
          volumeMounts:
            - name: eventstore-volume-data
              mountPath: /var/lib/eventstore
            - name: eventstore-volume-logs
              mountPath: /var/log/eventstore
      volumes:
        - name: eventstore-volume-data
          persistentVolumeClaim:
            claimName: eventstore-volume-data
        - name: eventstore-volume-logs
          persistentVolumeClaim:
            claimName: eventstore-volume-logs
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - hms-api-eventstore
        from:
          kind: ImageStreamTag
          name: hms-api-eventstore:latest
          namespace: fd34fb-tools
      type: ImageChange
