deployments/openshift/kustomize/base/backend/eventstore/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hms-api-eventstore
  labels:
    app: hms-api-eventstore
spec:
  clusterIP: None
  ports:
  - port: 2113
    name: eventstore-web
  - port: 1113
    name: eventstore-tcp
  - port: 2112
    name: gossip
  selector:
    name: hms-api-eventstore
---
